use the latest release of csound-rs bindings

--- a/gst-plugin-csound/Cargo.toml
+++ b/gst-plugin-csound/Cargo.toml
@@ -13,7 +13,7 @@ gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/g
 gst_base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst_audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst_check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-csound = { git = "https://github.com/neithanmo/csound-rs"}
+csound = "0.1.8"
 once_cell = "1.0"
 byte-slice-cast = "0.3"
 
