csound: Use gst-plugin-version-helper from this repository by path

--- a/gst-plugin-csound/Cargo.toml
+++ b/gst-plugin-csound/Cargo.toml
@@ -27,4 +27,4 @@ name = "csound-effect"
 path = "examples/effect_example.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }
+gst-plugin-version-helper = { path = "../gst-plugin-version-helper" }
