--- a/video/flavors/Cargo.toml
+++ b/video/flavors/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gst-plugin-flv"
+name = "gst-plugin-flavors"
 version = "0.6.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
