--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "audio/claxon",
     "audio/csound",
     "audio/lewton",
+    "audio/transcribe",
     "generic/file",
     "generic/sodium",
     "generic/threadshare",
