--- a/audio/transcribe/Cargo.toml
+++ b/audio/transcribe/Cargo.toml
@@ -3,11 +3,15 @@ name = "gst-plugin-transcribe"
 version = "0.1.0"
 authors = ["Jordan Petridis <jordan@centricular.com>"]
 edition = "2018"
+description = "AWS Transcribe plugin"
+repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 # FIXME: licence
 
 [dependencies]
 glib = { git = "https://github.com/gtk-rs/glib" }
-gst = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"], package = "gstreamer" }
+# FIXME:
+# gst = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"], package = "gstreamer" }
+gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
 gst_base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"], package ="gstreamer-base" }
 rusoto_core = "0.43.0-beta.1"
 rusoto_credential = "0.43.0-beta.1"
@@ -20,6 +24,10 @@ async-tungstenite = { version = "0.4", features = ["tokio", "tokio-runtime", "to
 nom = "5.1.1"
 crc = "1.8.1"
 byteorder = "1.3.4"
+lazy_static = "1.4.0"
+serde = "1"
+serde_derive = "1"
+serde_json = "1"
 
 [lib]
 name = "gsttranscribe"
