--- a/audio/transcribe/Cargo.toml
+++ b/audio/transcribe/Cargo.toml
@@ -1,18 +1,16 @@
 [package]
 name = "gst-plugin-transcribe"
 version = "0.1.0"
-authors = ["Jordan Petridis <jordan@centricular.com>"]
+authors = ["Jordan Petridis <jordan@centricular.com>", "Mathieu Duponchelle <mathieu@centricular.com>"]
 edition = "2018"
 description = "AWS Transcribe plugin"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-# FIXME: licence
+license = "LGPL-2.1+"
 
 [dependencies]
 glib = { git = "https://github.com/gtk-rs/glib" }
-# FIXME:
-# gst = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"], package = "gstreamer" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
-gst_base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"], package ="gstreamer-base" }
+gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 rusoto_core = "0.43.0-beta.1"
 rusoto_credential = "0.43.0-beta.1"
 rusoto_transcribe = "0.43.0-beta.1"
@@ -24,7 +22,7 @@ async-tungstenite = { version = "0.4", features = ["tokio", "tokio-runtime", "to
 nom = "5.1.1"
 crc = "1.8.1"
 byteorder = "1.3.4"
-lazy_static = "1.4.0"
+once_cell = "1.0"
 serde = "1"
 serde_derive = "1"
 serde_json = "1"
