ci: allow outdated job to fail
We'd like to be able to ignore some outdated deps which is not yet
possible: https://github.com/kbknapp/cargo-outdated/issues/127

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -117,6 +117,7 @@ audit:
 outdated:
   extends: '.tarball_setup'
   image: "rust:slim-buster"
+  allow_failure: true
   stage: 'extras'
   only:
     - schedules
