--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -165,13 +165,13 @@ clippy:
   script:
     - cargo clippy --color=always --all --all-features --all-targets -- -A clippy::redundant_pattern_matching -A clippy::single_match -A clippy::cast_lossless -D warnings
 
-audit:
+deny:
   extends: .img-stable
   stage: 'extras'
   only:
     - schedules
   script:
-    - cargo audit --deny-warnings
+    - cargo deny check
 
 outdated:
   extends: .img-stable
