--- a/utils/fallbackswitch/Cargo.toml
+++ b/utils/fallbackswitch/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-fallbackswitch"
 version = "0.6.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-license = "LGPL-2.1+"
+license = "LGPL-2.1-or-later"
 edition = "2018"
 description = "Fallback Switcher Plugin"
 
