--- a/audio/csound/Cargo.toml
+++ b/audio/csound/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-csound"
 version = "0.6.0"
 authors = ["Natanael Mojica <neithanmo@gmail.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-license = "LGPL-2.1+"
+license = "LGPL-2.1-or-later"
 edition = "2018"
 description = "An Audio filter plugin based on Csound"
 
