flavors: remove git suffix from git dep
Not needed and will make cargo deny sources list homogeneous.

--- a/video/flavors/Cargo.toml
+++ b/video/flavors/Cargo.toml
@@ -14,7 +14,7 @@ gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 num-rational = { version = "0.2", default-features = false, features = [] }
 nom = "5"
-flavors = {git = "https://github.com/rust-av/flavors.git"}
+flavors = { git = "https://github.com/rust-av/flavors" }
 muldiv = "0.2"
 byteorder = "1.0"
 lazy_static = "1.0"
