--- a/net/rusoto/Cargo.toml
+++ b/net/rusoto/Cargo.toml
@@ -8,16 +8,16 @@ description = "Amazon S3 Plugin"
 edition = "2018"
 
 [dependencies]
-bytes = "0.4"
-futures = "0.1"
+bytes = "0.5"
+futures = "0.3"
 glib = { git = "https://github.com/gtk-rs/glib" }
 gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
 gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
-rusoto_core = "0.42"
-rusoto_s3 = "0.42"
+rusoto_core = "0.43"
+rusoto_s3 = "0.43"
 url = "2"
 percent-encoding = "2"
-tokio = "0.1"
+tokio = { version = "0.2", features = [ "rt-threaded" ] }
 lazy_static = "1.0"
 
 [lib]
