Configure crate-type to cdylib/rlib consistently in Cargo.toml
And not in the source code, it's a build decision.

--- a/video/flavors/Cargo.toml
+++ b/video/flavors/Cargo.toml
@@ -22,7 +22,7 @@ smallvec = "1.0"
 
 [lib]
 name = "gstrsflv"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
