--- a/generic/file/Cargo.toml
+++ b/generic/file/Cargo.toml
@@ -15,7 +15,7 @@ lazy_static = "1.0"
 
 [lib]
 name = "gstrsfile"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
