--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -151,6 +151,8 @@ test nightly:
 rustfmt:
   extends: .img-stable
   stage: "lint"
+  rules:
+    - when: 'always'
   script:
     - cargo fmt --version
     - cargo fmt -- --color=always --check
@@ -158,6 +160,8 @@ rustfmt:
 clippy:
   extends: .img-stable
   stage: 'extras'
+  rules:
+    - when: 'always'
   script:
     - cargo clippy --color=always --all --all-features --all-targets -- -A clippy::redundant_pattern_matching -A clippy::single_match -A clippy::cast_lossless -D warnings
 
