--- a/audio/transcribe/Cargo.toml
+++ b/audio/transcribe/Cargo.toml
@@ -11,14 +11,14 @@ license = "LGPL-2.1-or-later"
 glib = { git = "https://github.com/gtk-rs/glib" }
 gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-rusoto_core = "0.43.0-beta.1"
-rusoto_credential = "0.43.0-beta.1"
-rusoto_transcribe = "0.43.0-beta.1"
-rusoto_signature = "0.43.0-beta.1"
+rusoto_core = "0.43.0"
+rusoto_credential = "0.43.0"
+rusoto_transcribe = "0.43.0"
+rusoto_signature = "0.43.0"
 reqwest = { version = "0.10", features = ["cookies", "gzip"] }
 futures = "0.3"
 tokio = { version = "0.2", features = ["time", "rt-threaded"] }
-async-tungstenite = { version = "0.4", features = ["tokio", "tokio-runtime", "tokio-tls"] }
+async-tungstenite = { version = "0.5", features = ["tokio", "tokio-runtime", "tokio-tls"] }
 nom = "5.1.1"
 crc = "1.8.1"
 byteorder = "1.3.4"
