--- a/net/rusoto/Cargo.toml
+++ b/net/rusoto/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "gst-plugin-rusoto"
 version = "0.6.0"
-authors = ["Arun Raghavan <arun@arunraghavan.net>"]
+authors = ["Arun Raghavan <arun@arunraghavan.net>",
+           "Jordan Petridis <jordan@centricular.com>",
+           "Mathieu Duponchelle <mathieu@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MIT/Apache-2.0"
-description = "Amazon S3 Plugin"
+description = "Amazon Web Services plugin"
 edition = "2018"
 
 [dependencies]
@@ -15,10 +17,21 @@ gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", fea
 gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
 rusoto_core = "0.43"
 rusoto_s3 = "0.43"
+rusoto_credential = "0.43"
+rusoto_transcribe = "0.43"
+rusoto_signature = "0.43"
 url = "2"
 percent-encoding = "2"
 tokio = { version = "0.2", features = [ "rt-threaded" ] }
 lazy_static = "1.0"
+async-tungstenite = { version = "0.5", features = ["tokio", "tokio-runtime", "tokio-tls"] }
+nom = "5.1.1"
+crc = "1.8.1"
+byteorder = "1.3.4"
+once_cell = "1.0"
+serde = "1"
+serde_derive = "1"
+serde_json = "1"
 
 [lib]
 name = "gstrusoto"
