ci: check commit using ci-fairy
See https://freedesktop.pages.freedesktop.org/ci-templates/ci-fairy.html#checking-commits

In this setup it will check for any leftover fixup!/squash! commits and
that messages don't have the 'Signed-off-by:' tag.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -157,6 +157,14 @@ rustfmt:
     - cargo fmt --version
     - cargo fmt -- --color=always --check
 
+check commits:
+  extends: .img-stable
+  stage: "lint"
+  rules:
+    - when: 'always'
+  script:
+    - ci-fairy check-commits --textwidth 0 --no-signed-off-by
+
 clippy:
   extends: .img-stable
   stage: 'extras'
