--- a/audio/claxon/Cargo.toml
+++ b/audio/claxon/Cargo.toml
@@ -8,10 +8,10 @@ description = "Claxon FLAC Decoder Plugin"
 edition = "2018"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-check = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.10" }
+gstreamer = { version = "0.16" }
+gstreamer-audio = { version = "0.16" }
+gstreamer-check = { version = "0.16" }
 claxon = { version = "0.4" }
 byte-slice-cast = "~0.3.4"
 atomic_refcell = "0.1"
@@ -22,4 +22,4 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
