--- a/audio/csound/Cargo.toml
+++ b/audio/csound/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2018"
 description = "An Audio filter plugin based on Csound"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst_base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst_audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst_check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.10" }
+gst = { package = "gstreamer", version = "0.16" }
+gst_base = { package = "gstreamer-base", version = "0.16" }
+gst_audio = { package = "gstreamer-audio", version = "0.16" }
+gst_check = { package = "gstreamer-check", version = "0.16" }
 csound = "0.1.8"
 once_cell = "1.0"
 byte-slice-cast = "0.3"
@@ -27,4 +27,4 @@ name = "csound-effect"
 path = "examples/effect_example.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path = "../../version-helper" }
+gst-plugin-version-helper = { path = "../../version-helper", version = "0.2" }
