--- a/audio/lewton/Cargo.toml
+++ b/audio/lewton/Cargo.toml
@@ -8,10 +8,10 @@ description = "lewton Vorbis Decoder Plugin"
 edition = "2018"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-check = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.10" }
+gstreamer = { version = "0.16" }
+gstreamer-audio = { version = "0.16" }
+gstreamer-check = { version = "0.16" }
 lewton = { version = "0.10", default-features = false }
 byte-slice-cast = "0.3"
 atomic_refcell = "0.1"
@@ -23,4 +23,4 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
