--- a/generic/file/Cargo.toml
+++ b/generic/file/Cargo.toml
@@ -8,9 +8,9 @@ description = "Rust File Plugin"
 
 [dependencies]
 url = "2"
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.10" }
+gstreamer = { version = "0.16" }
+gstreamer-base = { version = "0.16" }
 lazy_static = "1.0"
 
 [lib]
@@ -19,4 +19,4 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
