--- a/generic/sodium/Cargo.toml
+++ b/generic/sodium/Cargo.toml
@@ -8,9 +8,9 @@ license = "MIT"
 edition = "2018"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gst = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"], package="gstreamer" }
-gst-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"], package = "gstreamer-base" }
+glib = { version = "0.10" }
+gst = { version = "0.16", features = ["v1_14"], package="gstreamer" }
+gst-base = { version = "0.16", features = ["v1_14"], package = "gstreamer-base" }
 sodiumoxide = "0.2.1"
 lazy_static = "1.3.0"
 hex = "0.4"
@@ -26,11 +26,11 @@ pretty_assertions = "0.6"
 rand = "0.7"
 
 [dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.16"
 package="gstreamer-check"
 
 [dev-dependencies.gst-app]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.16"
 package="gstreamer-app"
 
 [lib]
@@ -54,4 +54,4 @@ path = "examples/decrypt_example.rs"
 required-features = ["serde", "serde_json", "clap"]
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
