--- a/generic/threadshare/Cargo.toml
+++ b/generic/threadshare/Cargo.toml
@@ -9,17 +9,17 @@ edition = "2018"
 
 [dependencies]
 libc = "0.2"
-glib-sys = { git = "https://github.com/gtk-rs/sys" }
-gobject-sys = { git = "https://github.com/gtk-rs/sys" }
-gio-sys = { git = "https://github.com/gtk-rs/sys" }
-glib = { git = "https://github.com/gtk-rs/glib" }
-gio = { git = "https://github.com/gtk-rs/gio" }
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features=["v1_10"] }
-gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-net = { package = "gstreamer-net", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-rtp = { package = "gstreamer-rtp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-sys = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys" }
+glib-sys = { version = "0.10" }
+gobject-sys = { version = "0.10" }
+gio-sys = { version = "0.10" }
+glib = { version = "0.10" }
+gio = { version = "0.9" }
+gst = { package = "gstreamer", version = "0.16", features=["v1_10"] }
+gst-app = { package = "gstreamer-app", version = "0.16" }
+gst-check = { package = "gstreamer-check", version = "0.16" }
+gst-net = { package = "gstreamer-net", version = "0.16" }
+gst-rtp = { package = "gstreamer-rtp", version = "0.16" }
+gstreamer-sys = { version = "0.9" }
 pin-project = "0.4"
 once_cell = "1"
 tokio = { git = "https://github.com/fengalin/tokio", tag = "tokio-0.2.13-throttling", features = ["io-util", "macros", "rt-core", "sync", "stream", "time", "tcp", "udp", "rt-util"] }
@@ -52,6 +52,6 @@ name = "tcpclientsrc-benchmark-sender"
 path = "examples/tcpclientsrc_benchmark_sender.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
 cc = "1.0.38"
 pkg-config = "0.3.15"
