--- a/net/reqwest/Cargo.toml
+++ b/net/reqwest/Cargo.toml
@@ -9,13 +9,13 @@ edition = "2018"
 
 [dependencies]
 url = "2.1"
-glib = { git = "https://github.com/gtk-rs/glib" }
+glib = { version = "0.10" }
 reqwest = { version = "0.10", features = ["cookies", "gzip"] }
 futures = "0.3"
 hyperx = "1.0"
 mime = "0.3"
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gstreamer = { version = "0.16", features = ["v1_10"] }
+gstreamer-base = { version = "0.16" }
 tokio = { version = "0.2", features = ["time", "rt-threaded"] }
 lazy_static = "1.0"
 
@@ -28,4 +28,4 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
