--- a/text/wrap/Cargo.toml
+++ b/text/wrap/Cargo.toml
@@ -8,13 +8,13 @@ description = "Rust Text Wrap Plugin"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
+glib = { version = "0.10" }
 once_cell = "1.0"
 textwrap = { version = "0.12", features = ["hyphenation"] }
 hyphenation = "0.8"
 
 [dependencies.gst]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.16"
 features = ["v1_12"]
 package="gstreamer"
 
@@ -24,8 +24,8 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
 
 [dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.16"
 package="gstreamer-check"
