--- a/tutorial/Cargo.toml
+++ b/tutorial/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2018"
 description = "Rust Tutorial Plugin"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.10" }
+gstreamer = { version = "0.16" }
+gstreamer-base = { version = "0.16" }
+gstreamer-video = { version = "0.16" }
+gstreamer-audio = { version = "0.16" }
 byte-slice-cast = "0.3"
 num-traits = "0.2"
 once_cell = "1.0"
