--- a/utils/fallbackswitch/Cargo.toml
+++ b/utils/fallbackswitch/Cargo.toml
@@ -9,21 +9,21 @@ description = "Fallback Switcher Plugin"
 
 [dependencies]
 libc = { version = "0.2", optional = true }
-glib = { git = "https://github.com/gtk-rs/glib" }
-glib-sys = { git = "https://github.com/gtk-rs/sys", optional = true }
-gobject-sys = { git = "https://github.com/gtk-rs/sys", optional = true }
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"] }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
-gst-sys = { package = "gstreamer-sys", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys", optional = true }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"] }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"] }
-gtk = { git = "https://github.com/gtk-rs/gtk", optional = true }
-gio = { git = "https://github.com/gtk-rs/gio", optional = true }
+glib = { version = "0.10" }
+glib-sys = { version = "0.10", optional = true }
+gobject-sys = { version = "0.10", optional = true }
+gst = { package = "gstreamer", version = "0.16", features = ["v1_14"] }
+gst-base = { package = "gstreamer-base", version = "0.16", features = ["v1_16"] }
+gst-sys = { package = "gstreamer-sys", version = "0.9", optional = true }
+gst-audio = { package = "gstreamer-audio", version = "0.16", features = ["v1_14"] }
+gst-video = { package = "gstreamer-video", version = "0.16", features = ["v1_14"] }
+gtk = { version = "0.9", optional = true }
+gio = { version = "0.9", optional = true }
 once_cell = "1.0"
 
 [dev-dependencies]
-gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs",  features = ["v1_14"]}
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs",  features = ["v1_14"]}
+gst-app = { package = "gstreamer-app", version = "0.16",  features = ["v1_14"]}
+gst-check = { package = "gstreamer-check", version = "0.16",  features = ["v1_14"]}
 
 [lib]
 name = "gstfallbackswitch"
@@ -36,7 +36,7 @@ path = "examples/gtk_fallbackswitch.rs"
 required-features = ["gtk", "gio"]
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
 cc = "1.0"
 pkg-config = "0.3"
 
