--- a/utils/togglerecord/Cargo.toml
+++ b/utils/togglerecord/Cargo.toml
@@ -8,12 +8,12 @@ repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 edition = "2018"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gtk = { git = "https://github.com/gtk-rs/gtk", optional = true }
-gio = { git = "https://github.com/gtk-rs/gio", optional = true }
+glib = { version = "0.10" }
+gstreamer = { version = "0.16" }
+gstreamer-audio = { version = "0.16" }
+gstreamer-video = { version = "0.16" }
+gtk = { version = "0.9", optional = true }
+gio = { version = "0.9", optional = true }
 parking_lot = "0.11"
 lazy_static = "1.0"
 
@@ -31,4 +31,4 @@ path = "examples/gtk_recording.rs"
 required-features = ["gtk", "gio"]
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
