--- a/video/cdg/Cargo.toml
+++ b/video/cdg/Cargo.toml
@@ -8,11 +8,11 @@ description = "CDG Plugin"
 edition = "2018"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
-gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
-gstreamer-app = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.10" }
+gstreamer = { version = "0.16", features = ["v1_12"] }
+gstreamer-base = { version = "0.16", features = ["v1_12"] }
+gstreamer-video = { version = "0.16", features = ["v1_12"] }
+gstreamer-app = { version = "0.16" }
 cdg = "0.1"
 cdg_renderer = "0.5"
 image = "0.23"
@@ -25,4 +25,4 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
