--- a/video/closedcaption/Cargo.toml
+++ b/video/closedcaption/Cargo.toml
@@ -8,30 +8,30 @@ description = "Rust Closed Caption Plugin"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
+glib = { version = "0.10" }
 combine = "4.0"
 either = "1"
 uuid = { version = "0.8", features = ["v4"] }
 chrono = "0.4"
 lazy_static = "1.2"
 atomic_refcell = "0.1"
-cairo-rs = { git = "https://github.com/gtk-rs/cairo", features=["use_glib"] }
-cairo-sys-rs = { git = "https://github.com/gtk-rs/cairo" }
-pango = { git = "https://github.com/gtk-rs/pango" }
-pangocairo = { git = "https://github.com/gtk-rs/pangocairo" }
+cairo-rs = { version = "0.9", features=["use_glib"] }
+cairo-sys-rs = { version = "0.10" }
+pango = { version = "0.9" }
+pangocairo = { version = "0.10" }
 
 [dependencies.gst]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.16"
 features = ["v1_16"]
 package="gstreamer"
 
 [dependencies.gst-base]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.16"
 features = ["v1_16"]
 package="gstreamer-base"
 
 [dependencies.gst-video]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.16"
 features = ["v1_16"]
 package="gstreamer-video"
 
@@ -40,7 +40,7 @@ pretty_assertions = "0.6"
 rand = { version = "0.7", features = ["small_rng"] }
 
 [dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.16"
 package="gstreamer-check"
 
 [lib]
@@ -49,5 +49,5 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
 cc = "1.0"
