--- a/video/dav1d/Cargo.toml
+++ b/video/dav1d/Cargo.toml
@@ -9,10 +9,10 @@ description = "Dav1d Plugin"
 
 [dependencies]
 dav1d = "0.5"
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.10" }
+gstreamer = { version = "0.16" }
+gstreamer-base = { version = "0.16" }
+gstreamer-video = { version = "0.16" }
 lazy_static = "1.0"
 
 [lib]
@@ -21,7 +21,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path = "../../version-helper" }
+gst-plugin-version-helper = { path = "../../version-helper", version = "0.2" }
 
 [features]
 build = ["dav1d/build"]
