--- a/video/flavors/Cargo.toml
+++ b/video/flavors/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2018"
 description = "Rust FLV Plugin"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.10" }
+gstreamer = { version = "0.16" }
+gstreamer-base = { version = "0.16" }
 num-rational = { version = "0.3", default-features = false, features = [] }
 nom = "5"
 flavors = { git = "https://github.com/rust-av/flavors" }
@@ -25,4 +25,4 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
