--- a/video/gif/Cargo.toml
+++ b/video/gif/Cargo.toml
@@ -7,10 +7,10 @@ license = "MIT/Apache-2.0"
 edition = "2018"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-check = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.10" }
+gstreamer = { version = "0.16" }
+gstreamer-video = { version = "0.16" }
+gstreamer-check = { version = "0.16" }
 gif = "0.10"
 atomic_refcell = "0.1"
 once_cell = "1"
@@ -25,4 +25,4 @@ name = "testvideosrc2gif"
 path = "examples/testvideosrc2gif.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
