--- a/video/rav1e/Cargo.toml
+++ b/video/rav1e/Cargo.toml
@@ -8,10 +8,10 @@ description = "rav1e AV1 Encoder Plugin"
 edition = "2018"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-check = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.10" }
+gstreamer = { version = "0.16" }
+gstreamer-video = { version = "0.16" }
+gstreamer-check = { version = "0.16" }
 rav1e = { version = "0.3", default-features = false }
 atomic_refcell = "0.1"
 lazy_static = "1.0"
@@ -22,4 +22,4 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
