--- a/video/rspng/Cargo.toml
+++ b/video/rspng/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2018"
 description = "An PNG encoder/decoder written in pure Rust"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst_video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst_check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.10" }
+gst = { package = "gstreamer", version = "0.16" }
+gst_video = { package = "gstreamer-video", version = "0.16" }
+gst_check = { package = "gstreamer-check", version = "0.16" }
 png = "0.16.3"
 once_cell = "1"
 parking_lot = "0.11"
@@ -23,4 +23,4 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path="../../version-helper", version = "0.2" }
