cdg: disable default features for the image crate
We don't need JPEG, GIF, etc. support so depending on the whole
dependency chain of them is not needed and only wastes CPU time.

As a result we can remove the gif crate exception in deny.toml.

--- a/video/cdg/Cargo.toml
+++ b/video/cdg/Cargo.toml
@@ -15,7 +15,7 @@ gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs
 gstreamer-app = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 cdg = "0.1"
 cdg_renderer = "0.6"
-image = "0.23"
+image = { version = "0.23", default-features = false }
 muldiv = "0.2"
 lazy_static = "1.0"
 
