--- a/generic/file/Cargo.toml
+++ b/generic/file/Cargo.toml
@@ -8,7 +8,7 @@ description = "Rust File Plugin"
 
 [dependencies]
 url = "2"
-glib = { git = "https://github.com/gtk-rs/glib" }
+glib = { git = "https://github.com/gtk-rs/gtk-rs" }
 gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 lazy_static = "1.0"
