--- a/generic/sodium/Cargo.toml
+++ b/generic/sodium/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 edition = "2018"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
+glib = { git = "https://github.com/gtk-rs/gtk-rs" }
 gst = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"], package="gstreamer" }
 gst-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"], package = "gstreamer-base" }
 sodiumoxide = "0.2.1"
