--- a/tutorial/Cargo.toml
+++ b/tutorial/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 description = "Rust Tutorial Plugin"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
+glib = { git = "https://github.com/gtk-rs/gtk-rs" }
 gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
