--- a/video/dav1d/Cargo.toml
+++ b/video/dav1d/Cargo.toml
@@ -9,7 +9,7 @@ description = "Dav1d Plugin"
 
 [dependencies]
 dav1d = "0.5"
-glib = { git = "https://github.com/gtk-rs/glib" }
+glib = { git = "https://github.com/gtk-rs/gtk-rs" }
 gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
