--- a/video/flavors/Cargo.toml
+++ b/video/flavors/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 description = "Rust FLV Plugin"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
+glib = { git = "https://github.com/gtk-rs/gtk-rs" }
 gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 num-rational = { version = "0.3", default-features = false, features = [] }
