flavors: Update to nom 6

--- a/video/flavors/Cargo.toml
+++ b/video/flavors/Cargo.toml
@@ -12,8 +12,8 @@ glib = { git = "https://github.com/gtk-rs/gtk-rs" }
 gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 num-rational = { version = "0.3", default-features = false, features = [] }
-nom = "5"
-flavors = { git = "https://github.com/rust-av/flavors", rev = "61f9e2463b06f590910974302741eaae185b2086" }
+nom = "6"
+flavors = { git = "https://github.com/rust-av/flavors" }
 muldiv = "1.0"
 byteorder = "1.0"
 lazy_static = "1.0"
